--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-MONGO_URL = mongodb+srv://Senura:senuradb@cluster0.328zwlm.mongodb.net/TranslatorDB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://movindusenuraaluthge:SLIIT@sliit.9pnop.mongodb.net/TranslatorDB?retryWrites=true&w=majority&appName=SLIIT
