--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.1",
-    "nodemon": "^3.1.4"
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.4",
+    "react-to-print": "^3.0.1"
   }
 }
