--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "jspdf-autotable": "^3.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-to-print": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
