--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
+    "emailjs": "^4.0.3",
+    "fortawesome": "^0.0.1-security",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-to-print": "^3.0.1"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
